# notbug

./: .gitignore
.github/workflows/: env.yml
python/2.1/: db.py  dockerfile  main.py  pyproject.toml  readme.md  requirements.txt  todo.db
python/2.2/: pyproject.toml
python/2.2/blog/: db.sqlite3
python/2.2/blog/blog/: settings.py
python/2.2/blog/home/: views.py
python/2.3/: main.py  readme.md
