[tool.poetry]
name = "2-1"
version = "0.1.0"
description = ""
authors = ["Mr.Resor <jakusienko@gmail.com>"]
readme = "README.md"
packages = [{include = "2"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.0"
flask-restful = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
