[tool.poetry]
name = "2-2"
version = "0.1.0"
description = ""
authors = ["Mr.Resor <jakusienko@gmail.com>"]
readme = "README.md"
packages = [{include = "2"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
